--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public -s",
-    "start:dev" :"sirv public --dev -s"
+    "start:dev": "sirv public --dev -s"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -28,6 +28,8 @@
     "svelte-routing": "^1.6.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "@googlemaps/js-api-loader": "^1.12.1",
+    "sirv-cli": "^1.0.0",
+    "svelte-google-maps": "^0.2.0"
   }
 }
