--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@types/jquery": "^3.5.6",
     "axios": "^0.21.1",
     "bootstrap": "^4.0.2",
     "bulma": "^0.9.3",
